--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server":"npx json-server db.json"
+    "server": "npx json-server db.json"
   },
   "dependencies": {
     "axios": "^1.11.0",
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.1",
     "react-router": "^7.8.2",
     "react-toastify": "^11.0.5",
+    "sweetalert": "^2.1.2",
     "zod": "^4.1.5"
   },
   "devDependencies": {
